--- a/package.json
+++ b/package.json
@@ -2,26 +2,23 @@
   "name": "pg-to-jsonschema",
   "description": "Postgres DB to json schema export",
   "version": "1.0.0",
-  "main": "lib/bundle.min.js",
-  "typings": "dev/index",
+  "main": "dist/src/index.js",
   "keywords": [
     "json-schema",
     "json",
     "postgresql"
   ],
   "scripts": {
-    "start": "node lib/bundle.min.js",
-    "sql:build": "cp -r sql/ dev/sql/",
-    "sql:build_prod": "cp -r sql/ lib/sql/",
-    "clean:test": "rm -rf test-dev/*",
-    "clean:dev": "rm -rf dev/*",
-    "clean:lib": "rm -rf lib/*",
+    "start": "node lib/bundle.min.js -c 'postgres://scoaswzwcohwua:I5YZyVOecjNoHJx-l48p1kvatI@ec2-54-195-240-107.eu-west-1.compute.amazonaws.com:5432/dao1078sdr29iq?&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory' -o /result",
+    "copy:sql": "cp -r sql/ dist/sql/",
+    "clean:test": "rm -rf test-dist/*",
+    "clean:dist": "rm -rf dist/*",
     "build": "tsc --project build-tsconfig.json",
-    "build_prod": "npm run build && browserify --node -t brfs -s main dev/index.js > dev/bundle.js && npm run minify",
-    "minify": "uglifyjs dev/bundle.js --screw-ie8 --compress --mangle --output lib/bundle.min.js",
-    "build:test": "tsc --project test-tsconfig.json && cp -r assets test-dev/",
-    "test": "npm run build:test && node node_modules/.bin/mocha -w --timeout 3000 test-dev/test-src",
-    "prebuild": "npm run clean:dev && npm run clean:lib && npm run sql:build && npm run sql:build_prod",
+    "build_prod": "npm run build && browserify --node -t brfs -s main dist/src/index.js > dist/bundle.js && npm run minify",
+    "minify": "uglifyjs dist/bundle.js --screw-ie8 --compress --mangle --output dist/bundle.min.js",
+    "build:test": "tsc --project test-tsconfig.json",
+    "test": "npm run build:test && node node_modules/.bin/mocha -w --timeout 3000 test-dist/test-src",
+    "prebuild": "npm run clean:dist && npm run copy:sql",
     "pretest": "npm run clean:test"
   },
   "author": "eugene.tomsen@gmail.com",
